tests/paczka1/small_fuzzy/53090583.err
Error in line 9: IIbRuzD A528 7,6
Error in line 12: IIbRuzD A233 16,9
